--- a/src/main/resources/generator/generate.properties
+++ b/src/main/resources/generator/generate.properties
@@ -21,20 +21,20 @@
 ########################## MySql ############################
 
 #java文件
-model_targetPackage=com.revert.xc.askForLeave.model
+model_targetPackage=com.revert.xc.user.model
 model_targetProject=./src/main/java
 # *Mapper.xml
-xml_targetPackage=com.revert.mysql.xc.askForLeave.mapper.impI
+xml_targetPackage=com.revert.mysql.xc.user.mapper.impI
 xml_targetProjecte=./src/main/resources
 # *Mapper.java
-mapper_targetPackage=com.revert.xc.askForLeave.mapper
+mapper_targetPackage=com.revert.xc.user.mapper
 mapper_targetProjecte=./src/main/java
 
 driverClass=com.mysql.jdbc.Driver
-connectionURL=jdbc:mysql://127.0.0.1:3306/activiti_m?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+connectionURL=jdbc:mysql://127.0.0.1:3306/simplepro?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 userName=root
 password=root
 
-tableName=t_askforleave
-domainObjectName=AskForLeave
+tableName=sys_t_user
+domainObjectName=User
 ########################## MySql ############################End
