--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,14 @@
           <fork>true</fork>
         </configuration>
       </plugin>
+      <!--打包跳过test-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
